trunk/Archive2/88/54ae6595d83254/output
main.cpp:4:16: error: parameter declaration for literal operator 'operator "" _ptr' is not valid
std::nullptr_t operator""_ptr(int i) {
               ^
main.cpp:10:16: error: no matching literal operator for call to 'operator "" _ptr' with argument of type 'unsigned long long' or 'const char *', and no matching literal operator template
    char* x = 0_ptr;
               ^
2 errors generated.
