trunk/Archive2/88/54ae6595d83254/main.cpp
#include <iostream>
#include <cassert>

std::nullptr_t operator""_ptr(int i) {
    assert(i == 0);
    return nullptr;
}

int main() {
    char* x = 0_ptr;
    return 0;
}